--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body{
 	background-color: rgb(194, 212, 180);
 }
 header{
-	height: 100px;
+	height: 150px;
 	width:100%;
 }
 .top{
@@ -33,16 +33,29 @@ header a{
 	width: 1000px;
 	float: left;
 	margin: 0 auto;
+	box-shadow: 1px 1px 30px black;
+	border-radius: 15px;
+}
+.page{
+	position: absolute!important;
+	top: 0;
+	left: 0;
+	width: 500px;
+	height: 600px;
+	background-color: white;
+}
+.left-m{
+	position: relative;
 }
 .left{
 	box-sizing: border-box;
-	width: 500px;
-	height: 100%;
 	float: left;
-	position: relative;
-	background-color: white;
 	border-radius: 15px 0 0 15px;
-	box-shadow: 1px 1px 30px black;
+	width: 500px;
+	height: 600px;
+	transform-origin: right top;
+	border:2px solid grey;
+	border-right:none;
 }
 .left::after{
 	content: "";
@@ -53,15 +66,19 @@ header a{
 	height: 100%;
 	background: linear-gradient(to right,white,#C5C5C5);
 }
+.right-m{
+	position: relative;
+}
 .right{
 	box-sizing: border-box;
 	width: 500px;
-	height: 100%;
+	height: 600px;
 	float: right;
-	position: relative;
-	background-color: white;
+	border:2px grey solid;
+	border-left:none;
 	border-radius:0 15px 15px 0;
-	box-shadow: 1px 1px 30px black;
+	transform-origin: left top;
+
 }
 .right::after{
 	content: "";
@@ -111,4 +128,11 @@ header a{
 	width: 50px;
 	text-align: center;
 	line-height: 50px;
+}
+.now{
+	z-index: 999;
+	transform:rotateY(0deg);
+}
+.next{
+	z-index: 998;
 }
