--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 body{
-	background-color: rgb(194, 212, 180);
+	background-color: #804545;
 }
 header{
-	height: 150px;
+	height: 120px;
 	width:100%;
 }
 .top{
@@ -14,6 +14,9 @@ header{
 }
 header h1{
 	margin-top: 0;
+	text-align: center;
+}
+.page h1{
 	text-align: center;
 }
 header a{
@@ -105,6 +108,18 @@ header a{
 	width:60px;
 	margin-top: 50px;
 	border-radius:0 20px 20px 0;
+	transition: width .5s;
+	text-align: center;
+	line-height: 40px;
+	font-weight: 600;
+	font-size: 18px;
+	text-shadow: 1px 1px 2px white;
+}
+.tags ul>li:hover{
+	width: 80px;
+}
+.focus{
+	width: 80px!important;
 }
 .tags ul>li:nth-child(1){
 	background-color: rgb(147,209,211);
@@ -121,14 +136,7 @@ header a{
 .tags ul>li:nth-child(5){
 	background-color: rgb(238,125,154);
 }
-.tags a{
-	text-decoration: none;
-	color:black;
-	display: block;
-	width: 50px;
-	text-align: center;
-	line-height: 50px;
-}
+
 .now{
 	z-index: 999;
 }
